rsworkspace/crates/trogon-eventsourcing/tests/ui/fail/after_then.stderr
error[E0599]: no method named `when` found for unit type `()` in the current scope
  --> tests/ui/fail/after_then.rs:13:10
   |
 9 |       TestCase::new(decider::<TestCommand>())
   |       ---------------------------------------
   |       |
   |  _____method `when` is available on `TestCase<TestCommand>`
   | |
10 | |         .given([])
   | |          --------- method `when` is available on `TestCase<TestCommand, Given<TestEvent>>`
11 | |         .when(TestCommand)
   | |          ----------------- method `when` is available on `TestCase<TestCommand, When<TestState, TestCommand>>`
12 | |         .then([TestEvent::Registered])
13 | |         .when(TestCommand);
   | |         -^^^^ method not found in `()`
   | |_________|
   |
